sign up and login button added on home page

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,3 +12,21 @@
 {
     padding-right: 100px;
 }
+.login-home
+{
+    margin-left: 20px;
+}
+.signup-home
+{
+    margin-left: 1020px;
+}
+#green
+{
+    color: #ffffff;
+    text-decoration: none;
+}
+#green1
+{
+    color: #ffffff;
+    text-decoration: none;
+}
