--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -102,21 +102,18 @@ input {
     border-radius: 1px;
 }
 
-#lc {
+.flex-container {
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    
 }
 
-#big {
-    background: -webkit-linear-gradient(left, #3931af, #00c6ff);
-    border-radius: 5px;
-}
+.flex-child {
+    flex: 1;
+    border: 2px solid black;
+    margin: 10px;
+    padding: 20px;
+}  
 
-#mango {
-    background-color: white;
-    border-radius: 20px;
-}
-#mango1{
-    border-radius: 20px;
-}
+.flex-child:first-child {
+    text-align: center;
+} 
