--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -104,7 +104,7 @@ input {
 
 .flex-container {
     display: flex;
-    
+
 }
 
 .flex-child {
@@ -112,26 +112,26 @@ input {
     border: 2px solid black;
     margin: 10px;
     padding: 20px;
-}  
+}
 
 .flex-child:first-child {
     text-align: center;
-} 
+}
 
 .search-bar-container {
     position: relative;
     width: 300px;
-  }
-  
-  .search-bar-container input[type="text"] {
+}
+
+.search-bar-container input[type="text"] {
     width: 100%;
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ddd;
     border-radius: 4px;
-  }
-  
-  .search-results {
+}
+
+.search-results {
     position: absolute;
     top: 40px;
     left: 0;
@@ -145,14 +145,22 @@ input {
     overflow-y: auto;
     max-height: 200px;
     z-index: 10;
-  }
-  
-  .search-results li {
+}
+
+.search-results li {
     padding: 10px;
     font-size: 16px;
     cursor: pointer;
-  }
-  
-  .search-results li:hover {
+}
+
+.search-results li:hover {
     background-color: #f2f2f2;
-  }
+}
+
+@media (max-width:1200px) {
+    .moverImage {
+        object-fit: contain;
+        width: 100%;
+        height: 100%;
+    }
+}
