--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -120,7 +120,7 @@ input {
 
 .search-bar-container {
     position: relative;
-    width: 300px;
+    width: 100%;
 }
 
 .search-bar-container input[type="text"] {
@@ -155,6 +155,13 @@ input {
 
 .search-results li:hover {
     background-color: #f2f2f2;
+}
+
+#bookMover {
+    background-color: #007BFF;
+    color: white;
+    border-radius: 5px;
+    border: none;
 }
 
 
@@ -236,5 +243,122 @@ input {
         object-fit: contain;
         width: 100%;
         height: 100%;
+    }
+
+
+
+}
+
+@media (max-width: 769px) {
+    .whyus {
+        margin-top: 0px;
+    }
+
+    .col-sm-12 {
+        flex: 0 0 auto;
+        width: 100%;
+        padding: 10px;
+    }
+
+    .merge {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .merge .searchBox {
+        /* position: absolute;
+        z-index: 1;
+        top: 50%;
+        left: 27%;
+        display: flex; */
+        flex-direction: column;
+        width: 50%;
+    }
+
+    .searchContainer {
+        /* background-color: aqua; */
+        width: 100%;
+    }
+
+    .searchInner #inp {
+        width: 100%;
+    }
+
+    .from #inp {
+        border-radius: 0.375rem 0.375rem 0px 0px;
+        border: none;
+    }
+
+    .to #inp {
+        border-left: none;
+        border-right: none;
+        border-color: inherit;
+    }
+
+    #but {
+        /* height: 50px;
+        border-radius: 1px; */
+        z-index: 1;
+        width: 50%;
+        border-radius: 0px 0px 0.375rem 0.375rem
+    }
+
+    .from .searchContainer .dropDown {
+        position: absolute;
+        z-index: 1;
+        top: 30%;
+        width: 50%;
+    }
+
+    .to .searchContainer .dropDown {
+        position: absolute;
+        z-index: 1;
+        top: 64%;
+        width: 50%;
+    }
+
+    /* .searchContainer .dropDownRow {
+
+        overflow: hidden;
+        overflow-y: auto;
+    } */
+
+    /* .searchContainer .dropDownRow {
+        position: relative;
+        top: 25%;
+    } */
+
+    .flex-container {
+        display: flex;
+        flex-direction: column;
+
+    }
+
+
+}
+
+
+@media (max-width:800px) {
+    .main-timeline::after {
+        display: none;
+    }
+
+    .timeline {
+        position: relative;
+        background-color: inherit;
+        width: 100%;
+    }
+
+    .timeline::after {
+        display: none;
+    }
+
+    .timeline-left {
+        padding: 10px;
+    }
+
+    .timeline-right {
+        padding: 10px;
+        left: 0%;
     }
 }
